--- a/cape/Vagrantfile
+++ b/cape/Vagrantfile
@@ -37,7 +37,7 @@ Vagrant.configure("2") do |config|
            -e 's/BOCHS_BLOCK_REPLACER3='\''<WOOT>'\''/BOCHS_BLOCK_REPLACER3='\''Seagate HDD'\''/' \
            -e 's/BXPC_REPLACER='\''<WOOT>'\''/BXPC_REPLACER='\''Intel'\''/' ./kvm-qemu.sh
 
-    sed -i -e 's/^NETWORK_IFACE=.*/NETWORK_IFACE=ens196/' \
+    sed -i -e 's/^NETWORK_IFACE=.*/NETWORK_IFACE=enp0s8/' \
        -e 's/^IFACE_IP=".*/IFACE_IP="192.168.57.10"/' \
        -e 's/^PASSWD=".*/PASSWD="vagrant"/' ./cape2.sh
 
